JIRA Id:NA Crucible Id:NA Type of change:F Description: Again fixing alignemnt of search , add export buttns to show them in single line.

--- a/web-client/hubclient/src/theme.scss
+++ b/web-client/hubclient/src/theme.scss
@@ -202,10 +202,9 @@ $athena-theme: (
     .agg-icon-buttons{
       margin-top: 20px;
       button{
-          margin-left: 5px; 
-          margin-right:5px;
-          padding: 0.5rem 1rem;
-          font-size: 1rem;
+          margin-left: 4px; 
+          margin-right:4px;
+          font-size: 0.90rem;
       }
   }  
   }
